Refactoring - 1. Better organization of mobile content 2. Ensure that no space is taken by parent element, the spacing is managed using child elements

--- a/style/_logo.scss
+++ b/style/_logo.scss
@@ -5,6 +5,8 @@
  color: $header-logo-color;
  display: inline-block;
  font-size: $header-logos-size;
+ padding: $header-spacing;
+ background-color: $sub-nav-color;
 }
 
 @include update-link-color(".site-logo__link", $header-logo-color);
